fixed input box i think

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="insert"><b>Insert base a:</b></p>
     <input type="text" id="insert2">
     <button id="calculate" onclick="calculateArea()"><b>Calculate</b></button>
-    <input id="answer"></input>
+    <input id="answer">
     <br>
     <br>
     <p class="insert"><b>Insert base b:</b></p>
